[package]
name = "rust-pathfinding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pathfinding = "3.0.12"
image = { version = "0.24.1", default-features = false }
imageproc = "0.23.0"
rusttype = "0.9.2"